--- a/web/templates/account_list.html
+++ b/web/templates/account_list.html
@@ -1,11 +1,12 @@
+
 <div>
 {% for user in users %}
 <a class="list-group-item account-item" href="#">
     <p class="account-user"> User: <span class="account-list-user-name">{{ user.name }}</span></p>
     {% if user.broken %}
-        <p class="account-info" style="color:red;"><span>Broken</span></p>
+        <p class="account-info broken"><span>Broken</span></p>
     {% else %}
-        <p class="account-info" style="color:green;"><span>Working</span></p>
+        <p class="account-info working"><span>Working</span></p>
     {% endif %}
 </a>
 {% endfor %}
